# ifonly

./: .gitignore  GAMEPLAN.md  Makefile  README.md  environment.yml  ifonly.toml  pyproject.toml  requirements.txt
references/: contest_types.csv
src/ifonly/: __init__.py  __main__.py  backtest.py  judge.py  summarize.py
src/ifonly/history/: contests.py  standings.py
src/ifonly/lineups/: __init__.py  generate.py  validate.py
src/ifonly/lineups/algorithms/: __init__.py  algorithm.py  maximize_ev.py  maximize_ev_multiple_sampler.py  maximize_ev_sampler.py  random_sampler.py
src/ifonly/utils/: matcher.py  printer.py
src/visualizations/: __main__.py  returns_over_time.py
