[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifonly"
version = "0.1.0"
description = "A simulator for historical Draft Kings Contests"
authors = [{ name = "Ethan Orlowsky", email = "ethaniorlowsky@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pandas>=2.2.2", "tqdm"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 88

[tool.mypy]
files = "src"
